@@ -1,0 +1,1 @@
+/opt/gnome220/share/automake-1.10/INSTALL
