@@ -1,3 +1,7 @@
+2009-04-21  Murray Cumming  <murrayc@murrayc.com>
+
+	docs/tutorial/clutter-tut.xml: Improved the text of the recent additions.
+
 2009-04-21  Johannes Schmid <jschmid@openismus.com>
   
   * docs/tutorial/clutter-tut.xml: Added section about timeline markers
